syntax = "proto3";

option go_package = "sports-betting-helper/proto/gen";

package betting;

service BettingService {
  rpc GetBookies(GetBookmakersRequest) returns (GetBookmakersResponse);
}

message Bookmaker {
  string id = 1;
  string name = 2;
  bool enabled = 3;
}

message GetBookmakersRequest {}

message GetBookmakersResponse {
  repeated Bookmaker bookmakers = 1;
}